@@ -152,7 +152,7 @@ option(CREATE_GUIS "Do you want to compile GUIs" OFF)
 if(CREATE_GUIS)
     option(CREATE_YARPVIEW "Do you want to compile yarpview?" ON)
     option(CREATE_GYARPMANAGER "Do you want to compile gyarpmanager?" ON)
-    option(CREATE_YARPSCOPE "Do you want to create yarpscope?" OFF)
+    option(CREATE_YARPSCOPE "Do you want to create yarpscope?" ON)
 else(CREATE_GUIS)
     unset(CREATE_YARPVIEW CACHE)
     unset(CREATE_GYARPMANAGER CACHE)
