@@ -16,7 +16,7 @@ IF (NOT YARP_FOUND)
   SET(YARP_VERSION_PATCH "@YARP_VERSION_PATCH@")
   SET(YARP_VERSION_MODIFIER "@YARP_VERSION_MODIFIER@")
   SET(YARP_VERSION_ABI "@YARP_VERSION_ABI@")
-  SET(YARP_SVN_REVISION "@YARP_SVN_REVISION@")
+  SET(YARP_VERSION_TWEAK "@YARP_VERSION_TWEAK@")
   SET(YARP_VERSION "${YARP_VERSION_MAJOR}.${YARP_VERSION_MINOR}.${YARP_VERSION_PATCH}${YARP_VERSION_MODIFIER}")
 
   # Pull in any dependencies that YARP libraries may have.
